# websockets

./: Cargo.toml
src/: client.rs  main.rs
svelte/src/: constants.ts  interfaces.ts  utility-functions.ts
svelte/src/lib/: input.svelte  toast.svelte  toasts.svelte
ui/: package-lock.json  package.json
ui/src/: App.svelte  interfaces.ts  stores.ts  utility-functions.ts
ui/src/lib/: button.svelte  chat-message.svelte  input.svelte  login.svelte  toast.svelte  toasts.svelte
vue/: index.html  package-lock.json  package.json
vue/src/: App.vue  interfaces.ts
vue/src/components/: ChatMessage.vue  Input.vue  Login.vue
vue/src/stores/: index.ts
